--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - run: jfrog --version
       - run: jfrog config show
       - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} --spec=upload.json 
-      - run: echo $GITHUB_ACTOR
+      - run: echo ${GITHUB_REF##*/}
       
         
       
