--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - run: jfrog --version
       - run: jfrog config show
       - run: |
-              cd events
+              cd routes
               jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "*" BMI/
       - run: echo ${GITHUB_REF#refs/heads/}
       - name: Set outputs
