--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,8 +32,13 @@ jobs:
               jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "*" BMI/
       - run: echo ${GITHUB_REF#refs/heads/}
       - name: Set outputs
-        id: vars
-        run: echo "$(git rev-parse --short HEAD)"
+        run: |
+              if: contains(github.ref, 'dev')
+              echo "$(git rev-parse --short HEAD)"
+              if: contains(github.ref, 'main')
+              echo "$(git rev-parse --short HEAD)"
+              
+        
       
         
       
