--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -37,7 +37,7 @@ jobs:
           to: jaydeepkaushik@outlook.com
           from: jaydeepkaushik@outlook.com
           body: |
-            echo "The workflow status is ${{ github.event.workflow_run.status }}"
+            The workflow status is ${{ github.event.workflow_run.status }}
             
             The build job outcome was: ${{ job.status }}
             
