--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -39,7 +39,7 @@ jobs:
             The build job outcome was: ${{needs.build.outputs.status_build}}
             The test job outcome was: ${{needs.test.outputs.status_test}}
             Job Status: ${{ job.status }}
-            Build Triggered by: ${{ GITHUB_ACTOR}}
+            Build Triggered by: ${{ GITHUB.ACTOR }}
             Job URL: ${{ BUILD_URL }}
             Project Name: ${{ GITHUB_REPOSITORY }}
             Job Name: ${{ GITHUB_WORKFLOW }}
