--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -33,7 +33,7 @@ jobs:
           username: jaydeepkaushik@outlook.com
           password: ${{ secrets.OUTLOOK_APP_PASSWORD }}
           subject: GitHub Action Notification
-          to: jaydeepkaushik@outlook.com
+          to: JenkinsNotifications@groups.outlook.com
           from: jaydeepkaushik@outlook.com
           body: |
             The build job outcome was: ${{needs.build.outputs.status_build}}
