--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       #Upload Artifactss
       - run: jfrog --version
       - run: jfrog config show
-      - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "package.json" BMI/B_${{github.run_number}}
+      - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "package.json" BMI/B_${{github.run_number}}/
       - run: | 
               echo ${GITHUB_REF##*/}
               echo '${{ secrets.JF_URL }}/BMI/B_${{github.run_number}}/' > latest.txt
