--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -10,7 +10,9 @@ jobs:
        - name: Build
          run: echo "Build....."
        - name: display user  
-         run: users
+         run: |
+              users
+              ${GITHUB_SHA::7}
     outputs:
        status_build: ${{ job.status }}
          
