--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,11 @@ name: BMI
 
 on:
   push: 
-  pull_request:
+  pull_request_target:
+    types:
+      - opened
+    branches:
+      - 'develop'
 
 jobs:
   build:
