--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,43 +66,43 @@ jobs:
       - run: jfrog config show
       - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "$GITHUB_WORKFLOW.tar.gz" $GITHUB_WORKFLOW/B_${{github.run_number}}/
       - run: echo $GITHUB_ACTOR
-      - name: Send Build Notifications
-        if: success()
-        run: |
-          curl -X POST -H "Content-Type: application/json" \
-          -d '{
-          "text": "
-             ***BUILD SUCCESS***
-            ${{ job.status }}	
-            Build Triggered by: '$GITHUB_ACTOR'
-            Job URL: '$BUILD_URL'
-            Project Name: '$GITHUB_REPOSITORY'
-            Job Name: '$GITHUB_WORKFLOW'
-            Build Number: '${{github.run_number}}'
-            Branch Name: '$GITHUB_REF'
-            Build Started at: '${{ github.event.head_commit.timestamp }}'
-            BUILD EVENT: '$GITHUB_EVENT_NAME'
-            BINARY URL: ${{ secrets.JF_URL }}/'$GITHUB_WORKFLOW'/B_${{github.run_number}}/'$GITHUB_WORKFLOW'.tar.gz
-          "
-          }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
-      - name: Send Build Notifications  
-        if: failure()
-        run: |
-          curl -X POST -H "Content-Type: application/json" \
-          -d '{
-          "text": "
-            ***BUILD FAILED***
-            ${{ job.status }}
-            Build Triggered by: '$GITHUB_ACTOR'
-            Job URL: '$BUILD_URL'
-            Project Name: '$GITHUB_REPOSITORY'
-            Job Name: '$GITHUB_WORKFLOW'
-            Build Number: '${{github.run_number}}'
-            Branch Name: '$GITHUB_REF'
-            Build Started at: '${{ github.event.head_commit.timestamp }}'
-            BUILD EVENT: '$GITHUB_EVENT_NAME'
-          "
-          }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
+#       - name: Send Build Notifications
+#         if: success()
+#         run: |
+#           curl -X POST -H "Content-Type: application/json" \
+#           -d '{
+#           "text": "
+#              ***BUILD SUCCESS***
+#             ${{ job.status }}	
+#             Build Triggered by: '$GITHUB_ACTOR'
+#             Job URL: '$BUILD_URL'
+#             Project Name: '$GITHUB_REPOSITORY'
+#             Job Name: '$GITHUB_WORKFLOW'
+#             Build Number: '${{github.run_number}}'
+#             Branch Name: '$GITHUB_REF'
+#             Build Started at: '${{ github.event.head_commit.timestamp }}'
+#             BUILD EVENT: '$GITHUB_EVENT_NAME'
+#             BINARY URL: ${{ secrets.JF_URL }}/'$GITHUB_WORKFLOW'/B_${{github.run_number}}/'$GITHUB_WORKFLOW'.tar.gz
+#           "
+#           }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
+#       - name: Send Build Notifications  
+#         if: failure()
+#         run: |
+#           curl -X POST -H "Content-Type: application/json" \
+#           -d '{
+#           "text": "
+#             ***BUILD FAILED***
+#             ${{ job.status }}
+#             Build Triggered by: '$GITHUB_ACTOR'
+#             Job URL: '$BUILD_URL'
+#             Project Name: '$GITHUB_REPOSITORY'
+#             Job Name: '$GITHUB_WORKFLOW'
+#             Build Number: '${{github.run_number}}'
+#             Branch Name: '$GITHUB_REF'
+#             Build Started at: '${{ github.event.head_commit.timestamp }}'
+#             BUILD EVENT: '$GITHUB_EVENT_NAME'
+#           "
+#           }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
         
       
         
