--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -29,7 +29,7 @@ jobs:
   send_notification:
     needs: [build, test]
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == push }}
+    if: ${{ github.event_name == 'push' }}
     steps:
       - name: Send email notification
         uses: dawidd6/action-send-mail@v3
