--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -28,7 +28,8 @@ jobs:
          
   send_notification:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
+    needs: [build, test]    
+    if: ${{ github.event_name == 'push' && always() }}
     steps:
       - name: Send email notification
         uses: dawidd6/action-send-mail@v3
