--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -29,7 +29,7 @@ jobs:
   send_notification:
     runs-on: ubuntu-latest
     needs: [build, test]    
-    if: ${{ github.event_name == 'push' && always() }}
+    if: ${{ github.event_name == 'pull_request' && always() }}
     steps:
       - name: Send email notification
         uses: dawidd6/action-send-mail@v3
