--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -28,7 +28,7 @@ jobs:
   send_notification:
     runs-on: ubuntu-latest
     needs: [build, test]    
-    if: ${{ github.event_name == 'pull_request' && always() }}
+    if: ${{ github.event_name == 'push' && always() }}
     steps:
       - name: Get values
         run: cd $GITHUB_WORKSPACE && bash script.sh
