--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -43,13 +43,12 @@ jobs:
           password: ${{ secrets.OUTLOOK_APP_PASSWORD }}
           subject: Build Completed - ${{ github.workflow }}
           to: jaideepkaushik12@gmail.com
-          cc: sarulathavimal@outlook.com
           from: jaydeepkaushik@outlook.com
           body: |
             Hi team,
-            First variable: $VAR
-            Second varibale: $VARI
-            Third variable: $VARIA
+            First variable: ${VAR}
+            Second varibale: ${VARI}
+            Third variable: ${VARIA}
             Project Name: ${{ github.repository }}
             The build job outcome was: ${{needs.build.outputs.status_build}}
             The test job outcome was: ${{needs.test.outputs.status_test}}
