--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -26,28 +26,28 @@ jobs:
        status_test: ${{ job.status }}
          
   send_notification:
-    runs-on: ubuntu-latest
-    needs: [build, test]    
-    if: ${{ github.event_name == 'push' && always() }}
-    steps:
-      - name: clone
-        uses: actions/checkout@v3
-      - name: Get values
-        run: cd $GITHUB_WORKSPACE && sudo bash script.sh
-      - name: Send email notification
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: smtp-mail.outlook.com
-          server_port: 587
-          username: jaydeepkaushik@outlook.com
-          password: ${{ secrets.OUTLOOK_APP_PASSWORD }}
-          subject: Build Completed - ${{ github.workflow }}
-          to: jaideepkaushik12@gmail.com
-          from: jaydeepkaushik@outlook.com
-          body: |
-            Hi team,
-            First variable: ${VAR}
-            Second varibale: ${VARI}
+  runs-on: ubuntu-latest
+  needs: [build, test]    
+  if: ${{ github.event_name == 'push' && always() }}
+  steps:
+    - name: clone
+      uses: actions/checkout@v3
+    - name: Get values
+      id: get_values
+      run: echo "::set-output name=VAR::Hello"
+    - name: Send email notification
+      uses: dawidd6/action-send-mail@v3
+      with:
+        server_address: smtp-mail.outlook.com
+        server_port: 587
+        username: jaydeepkaushik@outlook.com
+        password: ${{ secrets.OUTLOOK_APP_PASSWORD }}
+        subject: Build Completed - ${{ github.workflow }}
+        to: jaideepkaushik12@gmail.com
+        from: jaydeepkaushik@outlook.com
+        body: |
+          Hi team,
+          First variable: ${{ steps.get_values.outputs.VAR }}
             Third variable: ${VARIA}
             Project Name: ${{ github.repository }}
             The build job outcome was: ${{needs.build.outputs.status_build}}
