--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Get values
         id: get_values
-        run: echo "::set-output name=VAR::$VAR"
+        run: echo "::set-output name=VAR::${VAR}"
       - name: Send email notification
         uses: dawidd6/action-send-mail@v3
         with:
