--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - run: tar -cvf $GITHUB_WORKFLOW.tar.gz *
       - run: ls && pwd
       #Upload Artifactss
-      - run: jfrog --version
+      - run: echo ${{ github.event.number }}
       #- run: jfrog config show
       #- run: |
       #        cd routes
