--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
   push:
 
+env:
+  PR_NUMBER: ${{ github.event.number }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get Pull number
-        run: echo ${{ github.event.number }}    
+        run: echo ${{ env.PR_NUMBER }}    
       
         
       
