--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   push:
 
 env:
-  PR_NUMBER: ${{ github.event.number }}
+  GITHUB_PR_NUMBER: ${{github.event.pull_request.number}}
 
 jobs:
   build:
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get Pull number
-        run: echo ${{ env.PR_NUMBER }}    
+        run: echo "$GITHUB_PR_NUMBER"
       
         
       
