--- a/.github/workflows/build_1.yml
+++ b/.github/workflows/build_1.yml
@@ -11,4 +11,6 @@ jobs:
     name: Print event
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Pull Request Number ${{ github.event.pull_request.number }}"
+      - run: | 
+            echo "Pull Request Number ${{ github.event.pull_request.number }}"
+            echo $GITHUB_PR_NUMBER
