--- a/.github/workflows/build_1.yml
+++ b/.github/workflows/build_1.yml
@@ -25,4 +25,4 @@ jobs:
         uses: actions/checkout@v3
         
       - name: get mail
-        run: git log -n 1 --pretty=format:%ae remotes/origin/${{ github.head_ref }}
+        run: echo $GITHUB_EVENT_PATH
