--- a/.github/workflows/build_1.yml
+++ b/.github/workflows/build_1.yml
@@ -25,4 +25,6 @@ jobs:
         uses: actions/checkout@v3
         
       - name: get mail
-        run: echo $GITHUB_EVENT_PATH
+        run: | 
+             echo $GITHUB_EVENT_PATH
+             cat /home/runner/work/_temp/_github_workflow/event.json
