--- a/.github/workflows/build_1.yml
+++ b/.github/workflows/build_1.yml
@@ -22,7 +22,9 @@ jobs:
             echo $GITHUB_PR_NUMBER
             echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
             echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> "$GITHUB_ENV"
-
+      - name: Display source branch commit hash
+        run: echo "Source branch commit hash- ${{ github.event.pull_request.head.sha }}"
+        
       - name: get values
         run: |
               echo "Branch: ${{ env.branch }}"
