--- a/.github/workflows/outlook_noti.yml
+++ b/.github/workflows/outlook_noti.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
        - name: Build
-         run: echo "Build....."
+         run: echo "Build......"
        - name: display user  
          run: |
               echo ${GITHUB_SHA::7}
